K8s/pod/namespace/network-policy-dev-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dev-network-policy
  namespace: dev
spec:
  podSelector: {} #all pods in dev
#    matchLabels:
#      role: db
  policyTypes:
  - Ingress
#  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          area: dev 
    - podSelector: {}
#        matchLabels:
#          role: frontend
    ports:
    - protocol: TCP
      port: 80
